# aero_copilot

./: README.md  pyproject.toml
aero_copilot/: __init__.py
aero_copilot/api/: main.py
aero_copilot/core/: __init__.py  settings.py
aero_copilot/data/prompts/: translate_paper_v1.md  translate_v1.md
aero_copilot/llm/: __init__.py  prompt.py
aero_copilot/llm/chat/: base.py  openai_chat.py
aero_copilot/llm/completion/: base.py  ollama_completion.py  openai_completion.py
aero_copilot/schemas/: message.py
aero_copilot/translation/: translate.py
aero_copilot/workflows/: test_pdf.py
entrypoint/: api.sh
