[tool.poetry]
name = "aero-copilot"
version = "0.1.0"
description = ""
authors = ["zhiwen.wang <zhiwen.wang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
rich = "^13.7.1"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
httpx = "^0.27.0"
openai = "^1.16.1"
jinja2 = "^3.1.3"
loguru = "^0.7.2"
ollama = "^0.1.8"
dateparser = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# 忽略列表
extend-ignore = [
    "F401", # imported but unused (pyflakes),
    "E501", # line too long (pycodestyle),
]
line-length = 80

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]

[tool.ruff.lint.isort]
length-sort = true
combine-as-imports = true
detect-same-package = true